# Ahenk

./: .gitignore  AHENK_INFRASTRUCTURE_GUIDE.md  CHANGELOG.md  CORE_API_VERIFICATION_REPORT.md  CROSS_COMPILATION.md  Cargo.toml  Errors.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE-APACHE  LICENSE-MIT  MIGRATION_SYSTEM_SUMMARY.md  Makefile  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  publish.yml
docs/: CLI_USAGE.md  DATABASE_MIGRATIONS.md  MIGRATION_QUICK_START.md
examples/: device_pairing.rs  p2p_sync.rs
scripts/: README.md  build-all.sh  build-android.sh  build-ios.sh  build-linux.sh  build-macos.sh  build-watchos.sh  build-wearos.sh  build-windows.sh  setup-targets.sh
src/: auth.rs  crdt.rs  error.rs  ffi.rs  lib.rs  models.rs  tauri_api.rs
src/cli/: config.rs  daemon.rs
src/cli/commands/: daemon.rs  device.rs  init.rs  logs.rs  peer.rs  sync.rs  utils.rs
src/db/: migrations.rs  mod.rs  operations.rs  schema.sql
src/db/migrations/: 001_initial_schema.sql  002_add_pomodoro_sessions.sql  003_add_user_preferences.sql  004_add_soundscape_presets.sql  README.md
src/logic/: mod.rs  sync.rs  sync_manager.rs
tests/: integration_test.rs  logic_test.rs  migration_test.rs
