[package]
name = "nexus-core"
version = "0.1.0"
edition = "2024"
authors = ["FocusSuite Contributors"]
license = "MIT OR Apache-2.0"
description = "Cross-platform Rust library for database operations, business logic, and P2P synchronization in the FocusSuite productivity ecosystem"
repository = "https://github.com/kodfikirsanat/focussuite"
homepage = "https://github.com/kodfikirsanat/focussuite"
documentation = "https://docs.rs/nexus-core"
readme = "README.md"
keywords = ["database", "sync", "p2p", "sqlite", "productivity"]
categories = ["database", "network-programming", "authentication"]
exclude = [
    "target/",
    ".git/",
    ".github/",
    ".claude/",
    "*.log",
    "examples/",
    "scripts/",
    "tests/",
    ".cargo/",
]

[lib]
name = "nexus_core"
# Support both static and dynamic linking
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", optional = true }

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
chrono = { version = "0.4.42", features = ["serde"] }
rusqlite = "0.37.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.120"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
libp2p = { version = "0.53.2", features = ["full"] }
async-std = { version = "1.12", features = ["attributes"] }
futures = "0.3"
hex = "0.4"

# Optional Tauri support
tauri = { version = "2", optional = true }

[features]
default = []
tauri-api = ["tauri"]

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
panic = "abort"     # Smaller binary size
